--- a/frontend/src/pages/product/components/index.scss
+++ b/frontend/src/pages/product/components/index.scss
@@ -31,9 +31,9 @@
                 line-height: 18px;
             }
 
-            .btn_buy:hover {
-                background: red;
-            }
+            // .btn_buy:hover {
+            //     background: red;
+            // }
         }
     }
 
