--- a/frontend/src/layouts/Header/index.scss
+++ b/frontend/src/layouts/Header/index.scss
@@ -18,10 +18,12 @@
     flex-grow: 2;
     height: 100%;
     overflow: hidden;
+    display: flex;
+    align-items: center;
 
     img {
       width: 100%;
-      height: 100%;
+      height: 60%;
       object-fit: contain;
       object-position: center;
     }
